--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
             <li>Partes Viajeros Policia</li>
             <li>No Shows</li>
             <li>Minibares</li>
+            <br>
+            <input type="checkbox" name="orden" id="orden">
         </ol>
     </details>
     <br>
@@ -192,17 +194,20 @@
             <input type="checkbox" name="upselling" id="upselling">
             <label for="upselling">Upselling (inicio mes- dia cerrado, transaction codes desmarcar upselling web, marcar net revenue) Grand Total poner en acumulado mes. rellenar objetivo primer dia del mes</label>
             <br>
+            <input type="checkbox" name="observaciones" id="observaciones">
+            <label for="observaciones">En Observaciones poner rooom services y acondecimientos importantes que hayan transcurrido durante la noche</label>
+            <br>
             <input type="checkbox" name="capturapantalla" id="capturapantalla">
             <label for="capturapantalla">Captura de pantalla y pegar al mail</label>
+            <!-- Botón para resetear -->
             <br>
-            <input type="checkbox" name="enviarmail" id="enviarmail">
-            <label for="enviarmail">Enviar Mail Night Audit a las 06:00</label>
-             <!-- Botón para resetear -->
-             <br>
-             <br>
+            <br>
             <button type="reset">resetear</button>
         </form>
     </details>
+    <br>
+    <input type="checkbox" name="enviarmail" id="enviarmail">
+    <label for="enviarmail">Enviar Mail Night Audit a las 06:00</label>
    
     
     <br>
@@ -215,7 +220,7 @@
             <label for="departures">Departures</label>
             <br>
             <input type="checkbox" name="otrastareas" id="otrastareas">
-            <label for="otrastareas">Otras tareas: ordenar recepción, poner grapas y papel, cargar datáfonos, móviles y reponer barterias bicis</label>
+            <label for="otrastareas">Otras tareas: ordenar recepción, poner grapas y papel, cargar datáfonos, móviles, reponer barterias bicis y dejar caja recepción lista (para que el turno siguiente no tenga que ir a la caja fuerte a retirar dinero)</label>
             <br>
             <input type="checkbox" name="arqueopostcierre" id="arqueopostcierre">
             <label for="arqueopostcierre">Hacer Arqueo caja turno a las 06:00</label>
