no show modification

--- a/index.html
+++ b/index.html
@@ -85,9 +85,6 @@
             <input type="checkbox" name="cancelarreservas" id="cancelarreservas">
             <label for="cancelarreservas">Cancelar Reservas Ficticias</label>
             <br>
-            <input type="checkbox" name="regcardsnoshow" id="regcardsnoshow">
-            <label for="regcardsnoshow">Imprimir Reg cards No show</label>
-            <br>
             <input type="checkbox" name="policeincomplete" id="policeincomplete">
             <label for="policeincomplete">Rellenar el Police Incomplete</label>
             <br>
@@ -218,6 +215,9 @@
         <form action="POST">
             <input type="checkbox" name="departures" id="departures">
             <label for="departures">Departures</label>
+            <br>
+            <input type="checkbox" name="reinstatenoshows" id="reinstatenoshows">
+            <label for="reinstatenoshows">Reinstate a NoShows Correspondientes</label>
             <br>
             <input type="checkbox" name="otrastareas" id="otrastareas">
             <label for="otrastareas">Otras tareas: ordenar recepción, poner grapas y papel, cargar datáfonos, móviles, reponer barterias bicis y dejar caja recepción lista (para que el turno siguiente no tenga que ir a la caja fuerte a retirar dinero)</label>
