little mod 2 html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <!--End Of Day-->
             <input type="checkbox" name="extenderPM" id="extenderPM">
-            <label for="extenderPM">Extender 10 días más las PM. En total tiene que haber 8 departures que son los Puntos De Venta, tienen que tener balance a 0.00</label>
+            <label for="extenderPM">Extender 10 días más las PM. En total tiene que haber 8 departures que son los Puntos De Venta, tienen que tener balance a 0.00. Si no deja, board RO y mover a otro room (cualquiera) con concepto occupacy.</label>
             <br>
             <input type="checkbox" name="startend" id="startend">
             <label for="startend">Start End Of Day, check out zero balance departures</label>
