--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <label for="extenderPM">Extender 10 días más las PM. En total tiene que haber 8 departures que son los Puntos De Venta, tienen que tener balance a 0.00. Si no deja, board RO y mover a otro room (cualquiera) con concepto occupacy.</label>
             <br>
             <input type="checkbox" name="startend" id="startend">
-            <label for="startend">Start End Of Day, check out zero balance departures</label>
+            <label for="startend">Manage -> Start End Of Day, check out zero balance departures (x las veces que salga)</label>
             <br>
             <input type="checkbox" name="imprimirendofday" id="imprimirendofday">
             <label for="imprimirendofday">Imprimir reports End Of Day</label>
