added clarification to entrega de caja

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <label for="cierredatafonos">Cerrar Datáfonos y Ordenar visas datáfonos</label>
             <br>
             <input type="checkbox" name="entregacaja" id="entregacaja">
-            <label for="entregacaja">Rellenar, Archivar y Imprimir Caja y Entrega de caja (OK,0,Payment Total)</label>
+            <label for="entregacaja">Rellenar, Archivar y Imprimir Caja y Entrega de caja con Trial Balance y Arqueo de caja por turno con los pos (OK,0,Payment Total)</label>
             <br>
             <input type="checkbox" name="ingresoefectivo" id="ingresoefectivo">
             <label for="ingresoefectivo">Ingresar el efectivo mirando Entrega de Caja 2 y complementando intervención caja.</label>
