night audit clarifications

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <label for="completarrooms">Completar OOR OOS(hoy y search)</label>
             <br>
             <input type="checkbox" name="completarnoshows" id="completarnoshows">
-            <label for="completarnoshows">Completar No Shows (cierre a cierre)</label>
+            <label for="completarnoshows">Completar No Shows (cierre a cierre); si es The Level, poner SÍ en atenciones; si sale block code, es No Show de grupo</label>
             <br>
             <input type="checkbox" name="historyforecast" id="historyforecast">
             <label for="historyforecast">Completar History And Forecast (Net Revenue Marcado, cierre, hoy y mañana)</label>
