--- a/index.html
+++ b/index.html
@@ -239,5 +239,8 @@
            <button type="reset">resetear</button>
         </form>
     </details>
+    <footer>
+        Made with love by Dean Seth McAfee Grand Cherokee ©
+    </footer>
 </body>
 </html>
