--- a/index.html
+++ b/index.html
@@ -240,6 +240,9 @@
         </form>
     </details>
     <footer>
+        <!-- delete spaces after css -->
+        <br>
+        <br>
         Made with love by Dean Seth McAfee Grand Cherokee ©
     </footer>
 </body>
