--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <!-- delete spaces after css -->
         <br>
         <br>
-        Made with love by Dean Seth McAfee Grand Cherokee ©
+        Made with love by Dean Seth McAfee Grand-Cherokee ©
     </footer>
 </body>
 </html>
