added notes textarea

--- a/index.html
+++ b/index.html
@@ -206,12 +206,25 @@
     <br>
     <br>
     <br>
+
+
     <input type="checkbox" name="enviarmail" id="enviarmail">
     <label for="enviarmail">Enviar Mail Night Audit a las 06:00</label>
     <br>
     <input type="checkbox" name="arqueopostcierre" id="arqueopostcierre">
     <label for="arqueopostcierre">Hacer Arqueo Caja turno 30 minutos antes de terminar el turno</label>
     <br>
+    <br>
+    <br>
+    <section>
+        <form action="POST">
+            <fieldset style="width:50vh">
+                <legend>Apuntes</legend>
+                <textarea name="Apuntes" id="Apuntes" rows="10" cols="70" placeholder="Escribe aquí tus Apuntes y observaciones a poner en el night audit; Ahorra papel, salva el planeta ;)" ></textarea>
+
+            </fieldset>
+        </form>
+    </section>
 
    
     
