--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <input type="checkbox" name="novedades" id="novedades">
             <label for="novedades">Preguntar novedades</label>
             <br>
+            <input type="checkbox" name="firmarcaja" id="firmarcaja">
+            <label for="firmarcaja">Revisar y firmar arqueo de caja.</label>
+            <br>
             <input type="checkbox" name="desayunos" id="desayunos">
             <label for="desayunos">Punto de venta Desayunos</label>
             <br>
@@ -102,7 +105,9 @@
             <input type="checkbox" name="cierredatafonos" id="cierredatafonos">
             <label for="cierredatafonos">Cerrar Datáfonos y Ordenar visas datáfonos</label>
             <br>
-            
+            <input type="checkbox" name="park2" id="park2">
+            <label for="park2">Imprimir y adjuntar Journal by transaction code de PAK y día ayer.</label>
+            <br>
             
             <input type="checkbox" name="policelist" id="policelist">
             <label for="policelist">Enviar Police List y Imprimir</label>
